2023-11-22_kubernetes_tieto/hello-tieto/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-tieto
spec:
  selector:
    app: hello-tieto
  ports:
    - port: 80
