2023-11-22_kubernetes_tieto/hello-tieto/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-tieto
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - hello-tieto.k8s.sikademo.com
        - apache.k8s.sikademo.com
        - caddy.k8s.sikademo.com
      secretName: hello-tieto.k8s.sikademo.com-tls
  rules:
    - host: hello-tieto.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-tieto
                port:
                  number: 80
